--- a/src/components/Week.css
+++ b/src/components/Week.css
@@ -2,3 +2,23 @@
     display: flex;
     height: 100%;
 }
+
+.key {
+    margin-left: 30px;
+}
+
+.key > * {
+    margin-left: 5px;
+}
+
+.key .notAvailable {
+    background-color: gray;
+}
+
+.key .isAvailable {
+    background-color: green;
+}
+
+.key .class {
+    background-color: blue;
+}
