cleanup, styles, refactor

--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -1,8 +1,15 @@
 .Day {
     width: calc(100% / 7);
     border-left: 1px solid black;
+    border-top: 1px solid black;
 }
 
 .Day:last-of-type {
     border-right: 1px solid black;
 }
+
+.Day .name {
+    text-align: center;
+}
+
+
