--- a/src/components/Week.css
+++ b/src/components/Week.css
@@ -3,12 +3,20 @@
     height: 100%;
 }
 
+.addClass > * {
+    margin-right: 5px;
+}
+
 .key {
-    margin-left: 30px;
+    display: flex;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .key > * {
-    margin-left: 5px;
+    margin-right: 5px;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .key .notAvailable {
@@ -20,5 +28,6 @@
 }
 
 .key .class {
+    color: white;
     background-color: blue;
 }
